# policy-forge

./: .gitignore  README.md  pyproject.toml  run.sh
data/experiments/2026-05-03/: formulas.json  results.json
data/experiments/2026-05-04/: README.md  formulas.json  population.json  results.json
data/output/: combined_results.json  formula_1.json  formula_2.json  formula_3.json
notebooks/: initial_analysis.ipynb
scripts/: generate_formulas.py  initial_analysis.py  run_pipeline.py
src/policy_forge/: __main__.py  data.py  formula.py  pipeline.py  prompts.py  scorer.py  solver.py  task.py  tools.py
tests/: test_data.py  test_formula.py  test_tools.py
