[project]
name = "policy-forge"
version = "0.1.0"
description = "Automated pipeline for converting natural-language policies into formal Z3 logic models"
requires-python = ">=3.10"
dependencies = [
    "z3-solver",
    "inspect_ai",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
